--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Interact</title>
+<title>Santa Cecília</title>
 <meta name="description" content="">
 <meta name="author" content="">
 
@@ -42,18 +42,18 @@
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-      <a class="navbar-brand page-scroll" href="#page-top">Interact</a> </div>
+      <a class="navbar-brand page-scroll" href="#page-top">Associação Santa  Cecília</a> </div>
     
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#features" class="page-scroll">Features</a></li>
-        <li><a href="#about" class="page-scroll">About</a></li>
+        <li><a href="#about" class="page-scroll">Sobre</a></li>
         <li><a href="#services" class="page-scroll">Services</a></li>
-        <li><a href="#portfolio" class="page-scroll">Gallery</a></li>
+        <li><a href="#portfolio" class="page-scroll">Galeria</a></li>
         <li><a href="#testimonials" class="page-scroll">Testimonials</a></li>
         <li><a href="#team" class="page-scroll">Team</a></li>
-        <li><a href="#contact" class="page-scroll">Contact</a></li>
+        <li><a href="#contact" class="page-scroll">Contato</a></li>
       </ul>
     </div>
     <!-- /.navbar-collapse --> 
