--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <li><a href="#services" class="page-scroll">Services</a></li>
         <li><a href="#portfolio" class="page-scroll">Galeria</a></li>
         <li><a href="#testimonials" class="page-scroll">Testimonials</a></li>
-        <li><a href="#team" class="page-scroll">Team</a></li>
+        <li><a href="#team" class="page-scroll">Doação</a></li>
         <li><a href="#contact" class="page-scroll">Contato</a></li>
       </ul>
     </div>
