--- a/index.html
+++ b/index.html
@@ -193,83 +193,58 @@
       <div class="portfolio-items">
         <div class="col-sm-6 col-md-4 col-lg-4">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/01-large.jpg" title="Project Title" data-lightbox-gallery="gallery1">
+            <div class="hover-bg"> <a href="img/portifolio.jpg" title="Project Title" data-lightbox-gallery="gallery1">
               <div class="hover-text">
                 <h4>Lorem Ipsum</h4>
               </div>
-              <img src="img/portfolio/01-small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
+              <img src="img/Artesanato.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-4">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/02-large.jpg" title="Project Title" data-lightbox-gallery="gallery1">
+            <div class="hover-bg"> <a href="img/artesanato%20cri.jpg" title="Project Title" data-lightbox-gallery="gallery1">
               <div class="hover-text">
                 <h4>Adipiscing Elit</h4>
               </div>
-              <img src="img/portfolio/02-small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
+              <img src="img/aula.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-4">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/03-large.jpg" title="Project Title" data-lightbox-gallery="gallery1">
+            <div class="hover-bg"> <a href="img/menino.jpg" title="Project Title" data-lightbox-gallery="gallery1">
               <div class="hover-text">
                 <h4>Lorem Ipsum</h4>
               </div>
-              <img src="img/portfolio/03-small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
+              <img src="img/culinaria.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-4">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/04-large.jpg" title="Project Title" data-lightbox-gallery="gallery1">
+            <div class="hover-bg"> <a href="img/dan%C3%A7a.JPG" title="Project Title" data-lightbox-gallery="gallery1">
               <div class="hover-text">
                 <h4>Lorem Ipsum</h4>
               </div>
-              <img src="img/portfolio/04-small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
+              <img src="img/IMG_6237.JPG" class="img-responsive" alt="Project Title"> </a> </div>
+          </div>
+        </div>
+              <img src="img/meninas.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-4">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/05-large.jpg" title="Project Title" data-lightbox-gallery="gallery1">
-              <div class="hover-text">
-                <h4>Adipiscing Elit</h4>
-              </div>
-              <img src="img/portfolio/05-small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-4 col-lg-4">
-          <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/06-large.jpg" title="Project Title" data-lightbox-gallery="gallery1">
+            <div class="hover-bg"> <a href="img/grupo.JPG" title="Project Title" data-lightbox-gallery="gallery1">
               <div class="hover-text">
                 <h4>Dolor Sit</h4>
               </div>
-              <img src="img/portfolio/06-small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
+              <img src="img/teatro.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-4">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/07-large.jpg" title="Project Title" data-lightbox-gallery="gallery1">
+            <div class="hover-bg"> <a href="img/senhora.jpg" title="Project Title" data-lightbox-gallery="gallery1">
               <div class="hover-text">
                 <h4>Dolor Sit</h4>
               </div>
-              <img src="img/portfolio/07-small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-4 col-lg-4">
-          <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/08-large.jpg" title="Project Title" data-lightbox-gallery="gallery1">
-              <div class="hover-text">
-                <h4>Lorem Ipsum</h4>
-              </div>
-              <img src="img/portfolio/08-small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-4 col-lg-4">
-          <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/09-large.jpg" title="Project Title" data-lightbox-gallery="gallery1">
-              <div class="hover-text">
-                <h4>Adipiscing Elit</h4>
-              </div>
-              <img src="img/portfolio/09-small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
       </div>
@@ -390,14 +365,14 @@
     <div class="col-md-8">
       <div class="row">
         <div class="section-title">
-          <h2>ENTRAR EM CONTATO</h2>
-          <p>Por favor, preencha o formulário abaixo para nos enviar um e-mail e entraremos em contato com você o mais breve possível.</p>
+          <h2>Get In Touch</h2>
+          <p>Please fill out the form below to send us an email and we will get back to you as soon as possible.</p>
         </div>
         <form name="sentMessage" id="contactForm" novalidate>
           <div class="row">
             <div class="col-md-6">
               <div class="form-group">
-                <input type="text" id="nome" class="form-control" placeholder="Nome" required="required">
+                <input type="text" id="name" class="form-control" placeholder="Name" required="required">
                 <p class="help-block text-danger"></p>
               </div>
             </div>
@@ -409,35 +384,35 @@
             </div>
           </div>
           <div class="form-group">
-            <textarea name="menssagem" id="menssagem" class="form-control" rows="4" placeholder="Menssagem" required></textarea>
+            <textarea name="message" id="message" class="form-control" rows="4" placeholder="Message" required></textarea>
             <p class="help-block text-danger"></p>
           </div>
           <div id="success"></div>
-          <button type="submit" class="btn btn-custom btn-lg">Enviar Menssagem</button>
+          <button type="submit" class="btn btn-custom btn-lg">Send Message</button>
         </form>
       </div>
     </div>
     <div class="col-md-3 col-md-offset-1 contact-info">
       <div class="contact-item">
-        <h3>Contato</h3>
-        <p><span><i class="fa fa-map-marker"></i> Endereço</span>Rua Humberto Miranda N°03, jardim Cristália<br>
-          São Paulo, SP </p>
+        <h3>Contact Info</h3>
+        <p><span><i class="fa fa-map-marker"></i> Address</span>4321 California St,<br>
+          San Francisco, CA 12345</p>
       </div>
       <div class="contact-item">
-        <p><span><i class="fa fa-phone"></i> Telefone</span> +55 11 </p>
+        <p><span><i class="fa fa-phone"></i> Phone</span> +1 123 456 1234</p>
       </div>
       <div class="contact-item">
-        <p><span><i class="fa fa-envelope-o"></i> Email</span> gestao.stacecilia@gmail.com</p>
+        <p><span><i class="fa fa-envelope-o"></i> Email</span> info@company.com</p>
       </div>
     </div>
     <div class="col-md-12">
       <div class="row">
         <div class="social">
           <ul>
-            <li><a href="https://www.facebook.com/AssociacaoSantaCecilia/"><i class="fa fa-facebook"></i></a></li>
-           <!-- <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
             <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-            <li><a href=""><i class="fa fa-youtube"></i></a></li> -->
+            <li><a href="#"><i class="fa fa-youtube"></i></a></li>
           </ul>
         </div>
       </div>
