--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="utf-8">
@@ -377,7 +377,7 @@
         <div class="thumbnail"> <img src="img/team/04.jpg" alt="..." class="team-img">
           <div class="caption">
             <h4>Karen Doe</h4>
-            <p>Project Manager</p>
+            <p>Projeto gerencial</p>
           </div>
         </div>
       </div>
