--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Santa Cecília</title>
+<title>Associação Santa Cecília</title>
 <meta name="description" content="">
 <meta name="author" content="">
 
@@ -42,23 +42,24 @@
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-      <a class="navbar-brand page-scroll" href="#page-top">Associação Santa  Cecília</a> </div>
+      <a class="navbar-brand page-scroll" href="#page-top"><img src="img/icon.ico" >Associação Santa Cecília</a> </div>
     
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#features" class="page-scroll">Features</a></li>
+        <li><a href="#features" class="page-scroll">Recursos</a></li>
         <li><a href="#about" class="page-scroll">Sobre</a></li>
-        <li><a href="#services" class="page-scroll">Services</a></li>
+        <li><a href="#services" class="page-scroll">Serviços</a></li>
         <li><a href="#portfolio" class="page-scroll">Galeria</a></li>
-        <li><a href="#testimonials" class="page-scroll">Testimonials</a></li>
-        <li><a href="#team" class="page-scroll">Doação</a></li>
-        <li><a href="#contact" class="page-scroll">Contato</a></li>
+        <li><a href="#testimonials" class="page-scroll">Depoimentos</a></li>
+        <li><a href="#team" class="page-scroll">Doações</a></li>
+        <li><a href="#contact" class="page-scroll">Contatos</a></li>
       </ul>
     </div>
     <!-- /.navbar-collapse --> 
   </div>
 </nav>
+ 
 <!-- Header -->
 <header id="header">
   <div class="intro">
@@ -66,19 +67,19 @@
       <div class="container">
         <div class="row">
           <div class="col-md-8 col-md-offset-2 intro-text">
-            <h1>We Are Interact<span></span></h1>
+            <h1>Associação Santa Cecília<span></span></h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam sed commodo nibh ante facilisis bibendum.</p>
-            <a href="#features" class="btn btn-custom btn-lg page-scroll">Learn More</a> </div>
+            <a href="#features" class="btn btn-custom btn-lg page-scroll">Saber mais</a> </div>
         </div>
       </div>
     </div>
   </div>
 </header>
-<!-- Features Section -->
+<!-- Features Section --> 
 <div id="features" class="text-center">
   <div class="container">
     <div class="col-md-10 col-md-offset-1 section-title">
-      <h2>Features</h2>
+      <h2>Recursos</h2>
     </div>
     <div class="row">
       <div class="col-xs-6 col-md-3"> <i class="fa fa-comments-o"></i>
@@ -224,10 +225,10 @@
               <div class="hover-text">
                 <h4>Lorem Ipsum</h4>
               </div>
-              <img src="img/IMG_6237.JPG" class="img-responsive" alt="Project Title"> </a> </div>
+              <img src="img/IMG_6237.JPG" class="img-responsive" alt="Project Title" width: 100% height= 100% > </a> </div>
           </div>
         </div>
-              <img src="img/meninas.jpg" class="img-responsive" alt="Project Title"> </a> </div>
+              <img src="img/meninas.jpg" class="img-responsive" alt="Project Title" width: 100% height= 100%> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-4">
@@ -236,7 +237,7 @@
               <div class="hover-text">
                 <h4>Dolor Sit</h4>
               </div>
-              <img src="img/teatro.jpg" class="img-responsive" alt="Project Title"> </a> </div>
+              <img src="img/teatro.jpg" width: 100% height= 100% class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-4">
