--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
         </div>
         <div class="col-sm-6 col-md-4 col-lg-4">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/senhora.jpg" title="Project Title" data-lightbox-gallery="gallery1">
+            
               <div class="hover-text">
                 <h4>Dolor Sit</h4>
               </div>
@@ -356,10 +356,10 @@
         </div>
       </div>
       <div class="col-md-3 col-sm-6 team">
-        <div class="thumbnail"> <img src="img/team/04.jpg" alt="..." class="team-img">
+        <div class="thumbnail"> <img src="img/menino.jpg" alt="..." class="team-img">
           <div class="caption">
-            <h4>Karen Doe</h4>
-            <p>Projeto gerencial</p>
+            <h4>Criança brincando</h4>
+            <p>Projeto ong</p>
           </div>
         </div>
       </div>
@@ -372,14 +372,14 @@
     <div class="col-md-8">
       <div class="row">
         <div class="section-title">
-          <h2>Get In Touch</h2>
-          <p>Please fill out the form below to send us an email and we will get back to you as soon as possible.</p>
+          <h2>Entrar em contato</h2>
+          <p>Por favor, preencha o formulário abaixo para nos enviar um e-mail e entraremos em contato o mais breve possível.</p>
         </div>
-        <form name="sentMessage" id="contactForm" novalidate>
+        <form name="sentMenssagem" id="contactForm" novalidate>
           <div class="row">
             <div class="col-md-6">
               <div class="form-group">
-                <input type="text" id="name" class="form-control" placeholder="Name" required="required">
+                <input type="text" id="nome" class="form-control" placeholder="Nome" required="required">
                 <p class="help-block text-danger"></p>
               </div>
             </div>
@@ -391,35 +391,36 @@
             </div>
           </div>
           <div class="form-group">
-            <textarea name="message" id="message" class="form-control" rows="4" placeholder="Message" required></textarea>
+            <textarea name="menssagem" id="menssagem" class="form-control" rows="4" placeholder="Menssagem" required></textarea>
             <p class="help-block text-danger"></p>
           </div>
           <div id="success"></div>
-          <button type="submit" class="btn btn-custom btn-lg">Send Message</button>
+          <button type="submit" class="btn btn-custom btn-lg">Enviar Menssagem</button>
         </form>
       </div>
     </div>
     <div class="col-md-3 col-md-offset-1 contact-info">
       <div class="contact-item">
-        <h3>Contact Info</h3>
-        <p><span><i class="fa fa-map-marker"></i> Address</span>4321 California St,<br>
-          San Francisco, CA 12345</p>
+        <h3>Contato</h3>
+        <p><span><i class="fa fa-map-marker"></i> Endereço</span> São Paulo SP<br>
+          Rua Humberto Miranda, n°03<br>
+          Jardim Cristália</p>
       </div>
       <div class="contact-item">
-        <p><span><i class="fa fa-phone"></i> Phone</span> +1 123 456 1234</p>
+        <p><span><i class="fa fa-phone"></i> Telefone</span> +55 115851-1941</p>
       </div>
       <div class="contact-item">
-        <p><span><i class="fa fa-envelope-o"></i> Email</span> info@company.com</p>
+        <p><span><i class="fa fa-envelope-o"></i> Email</span> gestao.stacecilia@gmail.com</p>
       </div>
     </div>
     <div class="col-md-12">
       <div class="row">
         <div class="social">
           <ul>
-            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+            <li><a href="https://pt-br.facebook.com/AssociacaoSantaCecilia/"><i class="fa fa-facebook"></i></a></li>
+            <!-- <li><a href="#"><i class="fa fa-twitter"></i></a></li>
             <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-            <li><a href="#"><i class="fa fa-youtube"></i></a></li>
+            <li><a href="#"><i class="fa fa-youtube"></i></a></li>-->
           </ul>
         </div>
       </div>
@@ -439,5 +440,5 @@
 <script type="text/javascript" src="js/jqBootstrapValidation.js"></script> 
 <script type="text/javascript" src="js/contact_me.js"></script> 
 <script type="text/javascript" src="js/main.js"></script>
-</body>
+</body>/
 </html>
