--- a/index.html
+++ b/index.html
@@ -53,11 +53,8 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#features" class="page-scroll">Recursos</a></li>
         <li><a href="#about" class="page-scroll">Sobre</a></li>
-        <li><a href="#services" class="page-scroll">Serviços</a></li>
         <li><a href="#portfolio" class="page-scroll">Galeria</a></li>
-        <li><a href="#testimonials" class="page-scroll">Depoimentos</a></li>
         <li><a href="#team" class="page-scroll">Doações</a></li>
         <li><a href="#contact" class="page-scroll">Contatos</a></li>
       </ul>
@@ -74,116 +71,45 @@
         <div class="row">
           <div class="col-md-8 col-md-offset-2 intro-text">
             <h1>Associação Santa Cecília<span></span></h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam sed commodo nibh ante facilisis bibendum.</p>
-            <a href="#features" class="btn btn-custom btn-lg page-scroll">Saber mais</a> </div>
+            <a href="#about" class="btn btn-custom btn-lg page-scroll">Saber mais</a> </div>
         </div>
       </div>
     </div>
   </div>
 </header>
 <!-- Features Section --> 
-<div id="features" class="text-center">
-  <div class="container">
-    <div class="col-md-10 col-md-offset-1 section-title">
-      <h2>Recursos</h2>
-    </div>
-    <div class="row">
-      <div class="col-xs-6 col-md-3"> <i class="fa fa-comments-o"></i>
-        <h3>Lorem ipsum</h3>
-        <p>Lorem ipsum dolor sit amet placerat facilisis felis mi in tempus eleifend pellentesque natoque etiam.</p>
-      </div>
-      <div class="col-xs-6 col-md-3"> <i class="fa fa-bullhorn"></i>
-        <h3>Dolor sit amet</h3>
-        <p>Lorem ipsum dolor sit amet placerat facilisis felis mi in tempus eleifend pellentesque.</p>
-      </div>
-      <div class="col-xs-6 col-md-3"> <i class="fa fa-group"></i>
-        <h3>Tempus eleifend</h3>
-        <p>Lorem ipsum dolor sit amet placerat facilisis felis mi in tempus eleifend pellentesque natoque etiam.</p>
-      </div>
-      <div class="col-xs-6 col-md-3"> <i class="fa fa-magic"></i>
-        <h3>Pellentesque</h3>
-        <p>Lorem ipsum dolor sit amet placerat facilisis felis mi in tempus eleifend pellentesque natoque.</p>
-      </div>
-    </div>
-  </div>
-</div>
 <!-- About Section -->
 <div id="about">
   <div class="container">
     <div class="row">
-      <div class="col-xs-12 col-md-6"> <img src="img/about.jpg" class="img-responsive" alt=""> </div>
+      <div class="col-xs-12 col-md-6"> 
+          <img src="img/about.jpg" class="img-responsive" alt=""> 
+        
+        </div>
       <div class="col-xs-12 col-md-6">
         <div class="about-text">
-          <h2>About Us</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-          <h3>Why Choose Us?</h3>
+          <h2>Sobre nós</h2>
+          <p>A mobilização social que aconteceu no final dos anos 70 e inicio dos anos 80, impulsionada pela revolta em relação ao período de ditadura militar, deu origem a associação de moradores do JD. Santa Cecília. Com a liderança de Dona Albertina Santos Lima, um grupo de moradores começa a sonhar reunindo-se a fim de discutir a falta de políticas públicas e de infraestrutura no bairro em que moravam e assim reivindicar os seus direitos junto ao poder público.</p>
+            <p>Esses moradores acreditavam que através da mobilização social e da equidade conseguiram garantir seus direitos. Encorajados pelo sentimento de solidariedade e militância, em 18 de setembro de 1983 a “Santa Cecília” foi fundada..<br />
+            O trabalho foi tímido durante muitos anos, com ações e projetos pontuais, como, pré-escola, clube de mães, viva leite MOVA e CJ. Porém, foi um trabalho efetivo e eficaz que proporcionou mudança nas vidas de muitos dos atendidos na região do Jardim São Luís.</p>
+            <p>E o sonho de uma sociedade mais justa e igualitária continua. Atualmente, a Associação Santa Cecilia vem contribuindo para a implantação do Sistema Único de Assistência social – SUAS na cidade de São Paulo, além de projetos e atividades na área de educação e cultura. Em 2010 mudamos a razão social para Associação Santa Cecília, já que não atendíamos só o bairro JD. Cristália. Hoje, atuamos nos distritos JD. São Luís, Vila Andrade e Capão Redondo.</p>
+          <h3>Missão</h3>
+            <p>contribuir para o desenvolvimento integra, de crianças, adolescentes e suas famílias por meio de serviços de assistência social, educação e cidadania.</p>
+          <h3>Visão</h3>
+            <p>Ser percebida pelas comunidades e partes interessadas como uma organização que contribui para o desenvolvimento integral de crianças, adolescentes e famílias das comunidades nas quais está inserida.</p>
+          <h3>Valores</h3>
           <div class="list-style">
             <div class="col-lg-6 col-sm-6 col-xs-12">
               <ul>
-                <li>Lorem ipsum dolor</li>
-                <li>Tempor incididunt</li>
-                <li>Lorem ipsum dolor</li>
-                <li>Incididunt ut labore</li>
-              </ul>
-            </div>
-            <div class="col-lg-6 col-sm-6 col-xs-12">
-              <ul>
-                <li>Aliquip ex ea commodo</li>
-                <li>Lorem ipsum dolor</li>
-                <li>Exercitation ullamco</li>
-                <li>Lorem ipsum dolor</li>
+                <li>Qualidade no atendimento</li>
+                <li>Transparência</li>
+                <li>Ética</li>
+                <li>Igualdade</li>
+                <li>Solidariedade</li>
+                <li>Amor</li>
               </ul>
             </div>
           </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-<!-- Services Section -->
-<div id="services" class="text-center">
-  <div class="container">
-    <div class="section-title">
-      <h2>Our Services</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit duis sed dapibus leonec.</p>
-    </div>
-    <div class="row">
-      <div class="col-md-4"> <i class="fa fa-wordpress"></i>
-        <div class="service-desc">
-          <h3>Lorem ipsum dolor</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam sedasd commodo nibh ante facilisis bibendum dolor feugiat at.</p>
-        </div>
-      </div>
-      <div class="col-md-4"> <i class="fa fa-cart-arrow-down"></i>
-        <div class="service-desc">
-          <h3>Consectetur adipiscing</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam sedasd commodo nibh ante facilisis bibendum dolor feugiat at. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        </div>
-      </div>
-      <div class="col-md-4"> <i class="fa fa-cloud-download"></i>
-        <div class="service-desc">
-          <h3>Lorem ipsum dolor</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam sedasd commodo nibh ante facilisis bibendum dolor feugiat at.</p>
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-4"> <i class="fa fa-language"></i>
-        <div class="service-desc">
-          <h3>Consectetur adipiscing</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam sedasd commodo nibh ante facilisis bibendum dolor feugiat at.</p>
-        </div>
-      </div>
-      <div class="col-md-4"> <i class="fa fa-plane"></i>
-        <div class="service-desc">
-          <h3>Lorem ipsum dolor</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam sedasd commodo nibh ante facilisis bibendum dolor feugiat at.</p>
-        </div>
-      </div>
-      <div class="col-md-4"> <i class="fa fa-pie-chart"></i>
-        <div class="service-desc">
-          <h3>Consectetur adipiscing</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam sedasd commodo nibh ante facilisis bibendum dolor feugiat at.</p>
         </div>
       </div>
     </div>
@@ -250,73 +176,8 @@
           <div class="portfolio-item">
             
               <div class="hover-text">
-                <h4>Dolor Sit</h4>
+                <h4>Halloween</h4>
               </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-<!-- Testimonials Section -->
-<div id="testimonials">
-  <div class="container">
-    <div class="section-title text-center">
-      <h2>What our clients say</h2>
-    </div>
-    <div class="row">
-      <div class="col-md-4">
-        <div class="testimonial">
-          <div class="testimonial-image"> <img src="img/testimonials/01.jpg" alt=""> </div>
-          <div class="testimonial-content">
-            <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam sedasd commodo nibh ante facilisis bibendum dolor feugiat at."</p>
-            <div class="testimonial-meta"> - John Doe </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div class="testimonial">
-          <div class="testimonial-image"> <img src="img/testimonials/02.jpg" alt=""> </div>
-          <div class="testimonial-content">
-            <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam sedasd commodo nibh ante facilisis."</p>
-            <div class="testimonial-meta"> - Johnathan Doe </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div class="testimonial">
-          <div class="testimonial-image"> <img src="img/testimonials/03.jpg" alt=""> </div>
-          <div class="testimonial-content">
-            <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam sedasd commodo nibh ante facilisis bibendum dolor feugiat at."</p>
-            <div class="testimonial-meta"> - John Doe </div>
-          </div>
-        </div>
-      </div>
-      <div class="row"> </div>
-      <div class="col-md-4">
-        <div class="testimonial">
-          <div class="testimonial-image"> <img src="img/testimonials/04.jpg" alt=""> </div>
-          <div class="testimonial-content">
-            <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam sedasd commodo nibh ante facilisis bibendum dolor feugiat at."</p>
-            <div class="testimonial-meta"> - Johnathan Doe </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div class="testimonial">
-          <div class="testimonial-image"> <img src="img/testimonials/05.jpg" alt=""> </div>
-          <div class="testimonial-content">
-            <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam sedasd commodo nibh ante facilisis bibendum dolor feugiat at."</p>
-            <div class="testimonial-meta"> - John Doe </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div class="testimonial">
-          <div class="testimonial-image"> <img src="img/testimonials/06.jpg" alt=""> </div>
-          <div class="testimonial-content">
-            <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam sedasd commodo nibh ante facilisis."</p>
-            <div class="testimonial-meta"> - Johnathan Doe </div>
           </div>
         </div>
       </div>
