--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Associação Santa Cecília</title>
+<link rel="icon" 
+  type="text/css" 
+  href="img/icon.ico" />
 <meta name="description" content="">
 <meta name="author" content="">
 
@@ -283,7 +286,7 @@
           Jardim Cristália</p>
       </div>
       <div class="contact-item">
-        <p><span><i class="fa fa-phone"></i> Telefone</span> +55 115851-1941</p>
+        <p><span><i class="fa fa-phone"></i> Telefone</span> +55 11 5851-1941</p>
       </div>
       <div class="contact-item">
         <p><span><i class="fa fa-envelope-o"></i> Email</span> gestao.stacecilia@gmail.com</p>
@@ -306,7 +309,7 @@
 <!-- Footer Section -->
 <div id="footer">
   <div class="container text-center">
-    <p>&copy; 2017 Interact. Design by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
+    <p>&copy; 2018 Interact. Design by <a href="http://www.templatewire.com" rel="nofollow">Alunos Uninove</a></p>
   </div>
 </div>
 <script type="text/javascript" src="js/jquery.1.11.1.js"></script> 
