--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 <div id="portfolio" class="text-center">
   <div class="container">
     <div class="section-title">
-      <h2>Gallery</h2>
+      <h2>Galeria</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit duis sed dapibus leonec.</p>
     </div>
     <div class="row">
@@ -194,6 +194,8 @@
   <div class="container">
     <div class="col-md-8 col-md-offset-2 section-title">
       <h2>Doações</h2>
+    <p><h1>Nosso maior reconhecimento...</h1></p>    
+        <p align= right> <h1>...é o sorrido de uma criança.</h1></p>
       <p>Faça sua parte e ajude nossas crianças, acessando nosso botão de pagamento abaixo:</p>
         
     <!-- INICIO FORMULARIO BOTAO PAGSEGURO -->
@@ -270,11 +272,11 @@
             </div>
           </div>
           <div class="form-group">
-            <textarea name="menssagem" id="menssagem" class="form-control" rows="4" placeholder="Menssagem" required></textarea>
+            <textarea name="menssagem" id="menssagem" class="form-control" rows="4" placeholder="Mensagem" required></textarea>
             <p class="help-block text-danger"></p>
           </div>
           <div id="success"></div>
-          <button type="submit" class="btn btn-custom btn-lg">Enviar Menssagem</button>
+          <button type="submit" class="btn btn-custom btn-lg">Enviar Mensagem</button>
         </form>
       </div>
     </div>
