--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
       <div class="row">
         <div class="social">
           <ul>
-            <li><a href="https://pt-br.facebook.com/AssociacaoSantaCecilia/"><i class="fa fa-facebook"></i></a></li>
+            <li><a href="https://pt-br.facebook.com/AssociacaoSantaCecilia/" target="_blank"><i class="fa fa-facebook"></i></a></li>
             <!-- <li><a href="#"><i class="fa fa-twitter"></i></a></li>
             <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
             <li><a href="#"><i class="fa fa-youtube"></i></a></li>-->
